--- a/README
+++ b/README
@@ -27,5 +27,4 @@ This is my first pieces of published code. If you find it useful, or have sugges
 
 Eric Jacobsen
 code@whiskyvangoghgo.com
-http://whiskyvangoghgo.com
-August, 2011
+August, 2011, waiting for Irene in Brooklyn
